ECA-2165: Renamed RaAdminSessionBean to AdminPreferenceSessionBean. Also, my previous checkin failed for some random reason without me noticing, so some random cleanup work is being committed along with this. Sorry about that :/
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@12876 37aeb1de-b14b-0410-9a0e-82b28170d228