@@ -10,16 +10,13 @@
  *  See terms of license at gnu.org.                                     *
  *                                                                       *
  *************************************************************************/
- 
-package org.ejbca.core.model.hardtoken.profiles;
 
+package org.ejbca.core.model.hardtoken.profiles;
 
 import java.util.ArrayList;
 
 import org.ejbca.core.model.SecConst;
 import org.ejbca.core.model.hardtoken.HardTokenConstants;
-
-
 
 /**
  * Hard token profile with a goal to fulfill Swedish EID standard.
@@ -27,135 +24,118 @@ import org.ejbca.core.model.hardtoken.HardTokenConstants;
  * @version $Id$
  */
 public class TurkishEIDProfile extends EIDProfile {
-		
-	// Public Constants
-	public static final int TYPE_TURKISHEID = HardTokenConstants.TOKENTYPE_TURKISHEID;
-	
-	public static final float LATEST_VERSION = 1;
 
-    public static final int CERTUSAGE_SIGN    = 0;
-	public static final int CERTUSAGE_AUTHENC = 1;
-	
-			
-	
-	// Protected Constants
-	protected static final int NUMBEROFCERTIFICATES = 2;
-	protected static final int NUMBEROFPINS = 1;
-	
-	
-	// Private Constants
-	public static final int[] AVAILABLEMINIMUMKEYLENGTHS = {1024, 2048};
-		
-	
-	// Protected Fields
+    public static final int[] AVAILABLEMINIMUMKEYLENGTHS = { 1024, 2048 };
 
-	
-	
-	
+    public static final int TYPE_TURKISHEID = HardTokenConstants.TOKENTYPE_TURKISHEID;
+
+    public static final float LATEST_VERSION = 1;
+
+    public static final int CERTUSAGE_SIGN = 0;
+    public static final int CERTUSAGE_AUTHENC = 1;
+
+    private static final long serialVersionUID = 5029374290818871258L;
+
+    protected static final int NUMBEROFCERTIFICATES = 2;
+    protected static final int NUMBEROFPINS = 1;
+
     // Default Values
     public TurkishEIDProfile() {
-      super();
-      init();      
+        super();
+        init();
 
     }
 
-    private void init(){
+    private void init() {
         data.put(TYPE, Integer.valueOf(TYPE_TURKISHEID));
-        
-        ArrayList certprofileids = new ArrayList(NUMBEROFCERTIFICATES);
-  	  certprofileids.add(Integer.valueOf(SecConst.CERTPROFILE_FIXED_HARDTOKENSIGN)); 
-  	  certprofileids.add(Integer.valueOf(SecConst.CERTPROFILE_FIXED_HARDTOKENAUTHENC));
-  	  data.put(CERTIFICATEPROFILEID, certprofileids);
-  	  
-  	  ArrayList certWritable = new ArrayList(NUMBEROFCERTIFICATES);
-  	  certWritable.add(Boolean.FALSE);
-  	  certWritable.add(Boolean.FALSE);
-  	  data.put(CERTWRITABLE, certWritable);
-  	  
-  	  ArrayList caids = new ArrayList(NUMBEROFCERTIFICATES);
-  	  caids.add(Integer.valueOf(CAID_USEUSERDEFINED)); 
-  	  caids.add(Integer.valueOf(CAID_USEUSERDEFINED)); 
-  	  data.put(CAID, caids);    
-  	  
-  	  ArrayList pintypes = new ArrayList(NUMBEROFPINS);
-  	  pintypes.add(Integer.valueOf(PINTYPE_ASCII_NUMERIC));
-  	  data.put(PINTYPE, pintypes);
 
-  	  ArrayList minpinlength = new ArrayList(NUMBEROFPINS);
-  	  minpinlength.add(Integer.valueOf(4));
-  	  data.put(MINIMUMPINLENGTH, minpinlength);
-  	  
-  	  ArrayList iskeyrecoverable = new ArrayList(NUMBEROFCERTIFICATES);
-  	  iskeyrecoverable.add(new Boolean(false));
-  	  iskeyrecoverable.add(new Boolean(false));
-  	  data.put(ISKEYRECOVERABLE, iskeyrecoverable);
-  	  
-  	    
-  	  ArrayList reuseoldcertificate = new ArrayList(NUMBEROFCERTIFICATES);
-  	  reuseoldcertificate.add(Boolean.FALSE);
-  	  reuseoldcertificate.add(Boolean.FALSE);
-  	  data.put(REUSEOLDCERTIFICATE, reuseoldcertificate);		    
+        ArrayList<Integer> certprofileids = new ArrayList<Integer>(NUMBEROFCERTIFICATES);
+        certprofileids.add(Integer.valueOf(SecConst.CERTPROFILE_FIXED_HARDTOKENSIGN));
+        certprofileids.add(Integer.valueOf(SecConst.CERTPROFILE_FIXED_HARDTOKENAUTHENC));
+        data.put(CERTIFICATEPROFILEID, certprofileids);
 
-  	  ArrayList minimumkeylength = new ArrayList(NUMBEROFCERTIFICATES);
-  	  minimumkeylength.add(Integer.valueOf(1024));
-  	  minimumkeylength.add(Integer.valueOf(1024));
-  	  data.put(MINIMUMKEYLENGTH, minimumkeylength);	  
+        ArrayList<Boolean> certWritable = new ArrayList<Boolean>(NUMBEROFCERTIFICATES);
+        certWritable.add(Boolean.FALSE);
+        certWritable.add(Boolean.FALSE);
+        data.put(CERTWRITABLE, certWritable);
 
-  	  ArrayList keytypes = new ArrayList(NUMBEROFCERTIFICATES);
-  	  keytypes.add(KEYTYPE_RSA);
-  	  keytypes.add(KEYTYPE_RSA);
-  	  data.put(KEYTYPES, keytypes);
-  	      	
+        ArrayList<Integer> caids = new ArrayList<Integer>(NUMBEROFCERTIFICATES);
+        caids.add(Integer.valueOf(CAID_USEUSERDEFINED));
+        caids.add(Integer.valueOf(CAID_USEUSERDEFINED));
+        data.put(CAID, caids);
+
+        ArrayList<Integer> pintypes = new ArrayList<Integer>(NUMBEROFPINS);
+        pintypes.add(Integer.valueOf(PINTYPE_ASCII_NUMERIC));
+        data.put(PINTYPE, pintypes);
+
+        ArrayList<Integer> minpinlength = new ArrayList<Integer>(NUMBEROFPINS);
+        minpinlength.add(Integer.valueOf(4));
+        data.put(MINIMUMPINLENGTH, minpinlength);
+
+        ArrayList<Boolean> iskeyrecoverable = new ArrayList<Boolean>(NUMBEROFCERTIFICATES);
+        iskeyrecoverable.add(Boolean.FALSE);
+        iskeyrecoverable.add(Boolean.FALSE);
+        data.put(ISKEYRECOVERABLE, iskeyrecoverable);
+
+        ArrayList<Boolean> reuseoldcertificate = new ArrayList<Boolean>(NUMBEROFCERTIFICATES);
+        reuseoldcertificate.add(Boolean.FALSE);
+        reuseoldcertificate.add(Boolean.FALSE);
+        data.put(REUSEOLDCERTIFICATE, reuseoldcertificate);
+
+        ArrayList<Integer> minimumkeylength = new ArrayList<Integer>(NUMBEROFCERTIFICATES);
+        minimumkeylength.add(Integer.valueOf(1024));
+        minimumkeylength.add(Integer.valueOf(1024));
+        data.put(MINIMUMKEYLENGTH, minimumkeylength);
+
+        ArrayList<String> keytypes = new ArrayList<String>(NUMBEROFCERTIFICATES);
+        keytypes.add(KEYTYPE_RSA);
+        keytypes.add(KEYTYPE_RSA);
+        data.put(KEYTYPES, keytypes);
+
     }
 
-	
-	public int[] getAvailableMinimumKeyLengths(){
-		return AVAILABLEMINIMUMKEYLENGTHS;
-	}
-	  				        
-
-	/** 
-	 * @deprecated
-	 * @see org.ejbca.core.model.hardtoken.hardtokenprofiles.HardTokenProfile#isTokenSupported(java.lang.String)
-	 */
-	public boolean isTokenSupported(String tokenidentificationstring) {		
-		return false;
-	}
-
-
-
-	/* 
-	 * @see org.ejbca.core.model.hardtoken.hardtokenprofiles.HardTokenProfile#clone()
-	 */
-	public Object clone() throws CloneNotSupportedException {
-	    TurkishEIDProfile clone = new TurkishEIDProfile();
-	    super.clone(clone);
-
-	    return clone;
+    public int[] getAvailableMinimumKeyLengths() {
+        return AVAILABLEMINIMUMKEYLENGTHS;
     }
 
-	/* 
-	 * @see org.ejbca.core.model.hardtoken.hardtokenprofiles.HardTokenProfile#getLatestVersion()
-	 */
-	public float getLatestVersion() {
-	  return LATEST_VERSION;
-	}
+    /** 
+     * @deprecated
+     * @see org.ejbca.core.model.hardtoken.hardtokenprofiles.HardTokenProfile#isTokenSupported(java.lang.String)
+     */
+    public boolean isTokenSupported(String tokenidentificationstring) {
+        return false;
+    }
 
-	public void upgrade(){
-		if(Float.compare(LATEST_VERSION, getVersion()) != 0) {
-			// New version of the class, upgrade
-			super.upgrade();
-			
+    /* 
+     * @see org.ejbca.core.model.hardtoken.hardtokenprofiles.HardTokenProfile#clone()
+     */
+    public Object clone() throws CloneNotSupportedException {
+        TurkishEIDProfile clone = new TurkishEIDProfile();
+        super.clone(clone);
 
-			
-			data.put(VERSION, new Float(LATEST_VERSION));
-		}   
-	}    
-	
-	/**
-	 * @Override 
-	 */
-	public void reInit() {
-		init();
-	}
+        return clone;
+    }
+
+    /* 
+     * @see org.ejbca.core.model.hardtoken.hardtokenprofiles.HardTokenProfile#getLatestVersion()
+     */
+    public float getLatestVersion() {
+        return LATEST_VERSION;
+    }
+
+    public void upgrade() {
+        if (Float.compare(LATEST_VERSION, getVersion()) != 0) {
+            // New version of the class, upgrade
+            super.upgrade();
+
+            data.put(VERSION, new Float(LATEST_VERSION));
+        }
+    }
+
+    /**
+     * @Override 
+     */
+    public void reInit() {
+        init();
+    }
 }
